// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardPage.js if authenticated renders the proper page 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1pg8bi"
  />
  <p
    class="MuiTypography-root MuiTypography-subtitle2 css-1ob7xgl-MuiTypography-root"
  >
    Snooze List is empty.
  </p>
</DocumentFragment>
`;

exports[`DashboardPage.js if not authenticated renders please login 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-14sfki5-MuiTypography-root"
  >
    Please LOGIN to use this Chrome Extension.
  </p>
</DocumentFragment>
`;
